--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "vue-router": "^3.1.5",
     "vue-spinner": "^1.0.3",
     "vuelidate": "^0.7.5",
-    "vuex": "^3.1.2"
+    "vuex": "^3.1.2",
+    "websocket-extensions": ">=0.1.4"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.2.0",
